# neuron

./: CMakeLists.txt  README.md  __old.txt  dongzhenmao.cpp  my_algorithm.hpp  repomix-output.md  repomix-output.xml  run.bat  run_gemini.bat  testA.hpp  time_run.hpp
doc/: chinese.md  set.md
draw/: gemini.cpp
neuron/: brain.hpp  neuron.hpp
overall/: DA.hpp  const_v.hpp  overall.hpp  time.hpp
